# ebook-rs

./: Cargo.toml  README.md  config.toml
.github/workflows/: rust.yml
cloudreader.koplugin/: README.md  _meta.lua  main.lua
src/: auth.rs  config.rs  db.rs  error.rs  formats.rs  lib.rs  library.rs  main.rs  opds.rs  server.rs  tests.rs
src/db/: schema.rs
src/formats/: cbz.rs  epub.rs  jxl.rs  pdf.rs  placeholder.rs
src/server/: handlers.rs  state.rs
